# projeto-sockets

./: .clang-format  .gitignore  CMakeLists.txt  README.md
include/: server.h  stringDinamica.h  utilidade.h  vector.h
src/: CMakeLists.txt  cliente.c  doido.html  index.html  not_found.html  server.c  serverMain.c  stringDinamica.c  utilidade.c  vector.c
